--- a/pom.xml
+++ b/pom.xml
@@ -428,7 +428,7 @@
                             <id>report</id>
                             <phase>verify</phase>
                             <goals>
-                                <goal>report-aggregate</goal>
+                                <goal>report</goal>
                             </goals>
                         </execution>
                     </executions>
