--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,17 +123,11 @@ jobs:
           mvn ${{ env.MAVEN_CLI_OPTS }} clean verify -pl '${{ matrix.subproject }}' -am \
             -Djacoco.destFile=${{ github.workspace }}/${{ matrix.subproject }}/target/jacoco-${{ matrix.subproject }}.exec \
             -Djacoco.propertyName=argLine
-      - name: "Generate JaCoCo report for module"
-        run: |
-          mvn ${{ env.MAVEN_CLI_OPTS }} jacoco:report -pl '${{ matrix.subproject }}' \
-          -Djacoco.dataFile=${{ github.workspace }}/${{ matrix.subproject }}/target/jacoco-${{ matrix.subproject }}.exec
-
-      - name: "Upload coverage reports"
+      - name: "Upload coverage data"
         uses: actions/upload-artifact@v4
         with:
-          name: jacoco-report-${{ matrix.subproject }}
+          name: jacoco-exec-${{ matrix.subproject }}
           path: |
-            ${{ github.workspace }}/${{ matrix.subproject }}/target/site/jacoco/**
             ${{ github.workspace }}/${{ matrix.subproject }}/target/jacoco-${{ matrix.subproject }}.exec
           retention-days: 1
           if-no-files-found: warn
@@ -161,15 +155,15 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           pattern: jacoco-exec-*
-          path: ${{ github.workspace }}/aggregated-coverage
+          path: ${{ github.workspace }}
           merge-multiple: true
 
       - name: "Generate coverage report"
         run: |
-          find ${{ github.workspace }}/aggregated-coverage -type f -name "*.exec" | sort
+          find ${{ github.workspace }} -type f -name "*.exec" | sort
 
-          mvn ${{ env.MAVEN_CLI_OPTS }} jacoco:report \
-            -Djacoco.dataFileIncludes="${{ github.workspace }}/aggregated-coverage/**/*.exec"
+          mvn ${{ env.MAVEN_CLI_OPTS }} jacoco:report-aggregate \
+            -Djacoco.dataFileIncludes="${{ github.workspace }}/*.exec"
 
       - name: "Upload coverage report"
         uses: actions/upload-artifact@v4
