--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -244,9 +244,12 @@ jobs:
 
       - name: "Generate coverage report"
         run: |
-          find ${{ github.workspace }} -type f -name "*.exec" | sort
+          mvn compile -DskipTests
 
-          mvn jacoco:report-aggregate
+          mvn jacoco:report-aggregate \
+            -Djacoco.includes="${{ github.workspace }}/jacoco-report-*/ \
+            -Djacoco.outputDirectory=${{ github.workspace }}/target/site/jacoco-aggregate \
+            -DskipTests
 
       - name: "Upload coverage report"
         uses: actions/upload-artifact@v4
