--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -179,9 +179,8 @@ jobs:
       - name: "Generate coverage report"
         run: |
           mvn jacoco:report-aggregate \
-            -Djacoco.includes="${{ github.workspace }}/jacoco-report-*/ \
+            -Djacoco.includes=${{ github.workspace }}/jacoco-report-*/ \
             -Djacoco.outputDirectory=${{ github.workspace }}/target/site/jacoco-aggregate \
-            -DskipTests
 
       - name: "Upload coverage report"
         uses: actions/upload-artifact@v4
