feat(CIN-3844): add code coverage report jacoco implementation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -165,9 +165,9 @@ jobs:
       - name: "Merge JaCoCo .exec files"
         run: |
           mkdir -p target
-          mvn jacoco:merge -Djacoco.destFile=target/jacoco.exec \
-            -Djacoco.fileSets.fileSet.directory=${{ github.workspace }} \
-            -Djacoco.fileSets.fileSet.includes=**/*.exec \
+          find ${{ github.workspace }} -name "*.exec" -type f -exec echo {} \;
+          mvn ${{ env.MAVEN_CLI_OPTS }} jacoco:merge \
+            -Djacoco.destFile=target/jacoco.exec
       - name: "Generate coverage report"
         run: |
           mvn jacoco:report \
