[skip tests] add maven-dependency-submission-action to other workflows

--- a/.github/actions/tck-tests/action.yml
+++ b/.github/actions/tck-tests/action.yml
@@ -33,6 +33,8 @@ runs:
     - name: "Build application"
       shell: bash
       run: mvn ${{ inputs.maven-cli-opts }} clean install -DskipTests -pl live-ingester -am
+    - name: "Submit dependency graph"
+      uses: advanced-security/maven-dependency-submission-action@v4
     - name: "Run OpenApi Specification tests"
       shell: bash
       run: mvn test -Dtest=OpenApiTckRequestValidationTest -pl live-ingester
