--- a/.github/actions/tck-tests/action.yml
+++ b/.github/actions/tck-tests/action.yml
@@ -35,6 +35,8 @@ runs:
       run: mvn ${{ inputs.maven-cli-opts }} clean install -DskipTests -pl live-ingester -am
     - name: "Submit dependency graph"
       uses: advanced-security/maven-dependency-submission-action@v4
+      with:
+        ignore-maven-wrapper: true
     - name: "Run OpenApi Specification tests"
       shell: bash
       run: mvn test -Dtest=OpenApiTckRequestValidationTest -pl live-ingester
