--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,6 +132,8 @@ jobs:
         uses: advanced-security/maven-dependency-submission-action@v4
         with:
           ignore-maven-wrapper: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: "Generate coverage report"
         run: |
