--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -27,6 +27,7 @@ jobs:
     permissions:
       # required for all workflows
       security-events: write
+      contents: write
 
       # required to fetch internal or private CodeQL packs
       packages: read
