[skip tests] set 5.4.3 version for httpclient5 in hxinsight-extension

--- a/hxinsight-extension/pom.xml
+++ b/hxinsight-extension/pom.xml
@@ -27,6 +27,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents.client5</groupId>
+                <artifactId>httpclient5</artifactId>
+                <version>${httpclient5.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
