--- a/.github/workflows/nightly_tests_and_veracode.yml
+++ b/.github/workflows/nightly_tests_and_veracode.yml
@@ -1,6 +1,9 @@
 name: Veracode and Nightly Tests run
 
 on:
+  push:
+    branches:
+      - feature/**
   schedule:
     - cron: "0 0 * * *"  # Runs every night at midnight
 
