--- a/hxinsight-extension/pom.xml
+++ b/hxinsight-extension/pom.xml
@@ -16,6 +16,7 @@
     <properties>
         <maven.build.sourceVersion>${alfresco-platform.java.version}</maven.build.sourceVersion>
         <maven.build.targetVersion>${alfresco-platform.java.version}</maven.build.targetVersion>
+        <httpclient5.version>5.4.3</httpclient5.version>
     </properties>
 
     <dependencyManagement>
