--- a/pom.xml
+++ b/pom.xml
@@ -425,6 +425,26 @@
                                 <goal>report</goal>
                             </goals>
                         </execution>
+                        <execution>
+                        <id>check</id>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <rule>
+                                    <element>BUNDLE</element>
+                                    <limits>
+                                        <limit>
+                                            <counter>INSTRUCTION</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>0.80</minimum>
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
+                        </execution>
                     </executions>
                 </plugin>
 
